And fix spacing for inbound…

--- a/app/assets/stylesheets/components/table.scss
+++ b/app/assets/stylesheets/components/table.scss
@@ -230,12 +230,18 @@
 }
 
 .table-show-more-link {
+
   @include core-16;
   color: $secondary-text-colour;
   margin-bottom: $gutter * 1.3333;
   border-bottom: 1px solid $border-colour;
   padding: 10px 0 10px 0;
   text-align: center;
+
+  .table + & {
+    margin-top: -$gutter;
+  }
+
 }
 
 a.table-show-more-link {
